# tago-hyp-client

./: README.md  pom.xml  test.sh
config/: postgress-props.xml  rss-config.xml  tagomizer-props-template.xml
docs/ddr/: DDR-01.md  DDR-02.md
sql/: hn-schema.sql  notes.txt  tagomizer.sql
src/main/java/org/topicquests/hn/rss/: Main.java  RssEnvironment.java  RssHnAgent.java  RssHnClient.java  Test.java  TreeNode.java  Utils.java
src/main/java/org/topicquests/hn/rss/api/: ExternalService.java  IBacksideDatabase.java  ICommonModel.java  IConstants.java  IDSL.java  IQueries.java  IThreadListener.java  ITreeNode.java  PostType.java
src/main/java/org/topicquests/hn/rss/nlp/: DatabaseHarvester.java  NodeStudyThread.java
src/main/java/org/topicquests/hn/rss/persist/: PostgresDbDriver.java
src/main/java/org/topicquests/hn/rss/search/: RssHnModel.java
src/main/java/org/topicquests/hn/rss/spacy/: HttpClient.java  SpacyHttpClient.java
src/main/java/org/topicquests/hn/rss/util/: SimpleHttpClient.java
src/main/java/org/topicquests/ks/tagomizer/: BaseHttpClient.java  TagomizerClientEnvironment.java
src/main/java/org/topicquests/ks/tagomizer/api/: IAnalyzerListener.java  IConstants.java  ISQL.java
src/main/java/tests/: BootTest.java  FirstClientTest.java  FirstProcessorTest.java  GroupPivotTest.java  HarvestTest.java  ListResourcesTest.java  ResourcePivotTest.java  SearchTest.java  TagPivotTest.java  TestFramework.java  TestRoot.java  UserPivotTest.java
src/main/python/: ReadMe.md  app.py  nounspotter.py  setup.cfg  spacy.sh
src/main/resources/: log4j2.xml
(+18 files in other folders)
