[metadata]
name=asr_v_core
author = Jack Park
author_email = jackpark@topicquests.org
version = 0.0.1

[options]
packages = find:
zip_safe = True
include_package_data = True
python_requires = >=3.9
install_requires =
  scikit-learn==1.1.2
  spacy
  scispacy
  starlette
  uvicorn
  en_core_sci_lg

# spacy_dbpedia_spotlight

dependency_links =
  en_core_sci_lg @ https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.5.1/en_core_sci_lg-0.5.1.tar.gz
